# rdk-halif-aidl

./: .gitattributes  .gitignore  .mkdocs-ignore  404.html  BUILD.md  CHANGELOG.md  CMakeLists.binder.txt  CMakeLists.inc  CMakeLists.txt  COMMANDS.md  CONTRIBUTING.md  NOTICE  OUTPUT.md  RAG_STATUS_REPORT.md  README.md  activate_venv.sh  aidl_ops  audit_build.sh  build-aidl-generator-tool.sh  build-binder-example.sh  build-linux-binder-aidl.sh  build_binder.sh  build_interfaces.sh  build_module.sh  build_modules.sh  check_aidl_changes.sh  clone-android-binder-repo.sh  cmake_stage_modules.cmake  cmake_stage_sdk.cmake  copilot-instructions.md  deploy_docs.sh  dev_build.sh  freeze_interface.sh  index.html  install_binder.sh  mkdocs.yml  quick_test.sh  setup-env.sh  sitemap.xml  test.sh  (+4 more)
.github/: CODEOWNERS  copilot-instructions.md
.github/workflows/: cla.yml  update-rag-report.yml
0.10.0/: 404.html  index.html  sitemap.xml
0.10.0/python_venv/: pyvenv.cfg
0.10.0/search/: search_index.json
0.11.0/: 404.html  index.html  sitemap.xml
0.11.0/CHANGELOG/: index.html
0.11.0/scripts/: rewrite_wiki_links.py
0.11.0/search/: search_index.json
0.12.0/: 404.html  index.html  sitemap.xml
0.12.0/CHANGELOG/: index.html
0.12.0/python_venv/: pyvenv.cfg
0.12.0/search/: search_index.json
0.13.0/: 404.html  index.html  sitemap.xml
0.13.0/CHANGELOG/: index.html
0.13.0/python_venv/: pyvenv.cfg
0.13.0/scripts/: build_interfaces.sh
0.13.0/search/: search_index.json
0.15.0/: 404.html  index.html  sitemap.xml  version.txt
0.15.0/CHANGELOG/: index.html
0.15.0/search/: search_index.json
0.8.1/: 404.html  index.html  sitemap.xml
0.8.2/: 404.html  index.html  sitemap.xml
0.8.2/python_venv/: pyvenv.cfg
0.8.2/search/: search_index.json
0.8.3/: 404.html  build_docs.sh  index.html  sitemap.xml
CMakeModules/: CompileAidl.cmake
aidl-generator/: CMakeLists.txt
audiodecoder/: README.md  metadata.yaml
audiodecoder/current/: CMakeLists.txt  hfp-audiodecoder.yaml  interface.yaml  metadata.yaml  mkdocs.yml
audiomixer/: metadata.yaml
audiomixer/.github/: copilot-instructions.md
audiomixer/current/: CMakeLists.txt  hfp-audiomixer.yaml  interface.yaml  metadata.yaml  mkdocs.yml
audiosink/: metadata.yaml
audiosink/current/: CMakeLists.txt  hfp-audiosink.yaml  interface.yaml  metadata.yaml  mkdocs.yml
avbuffer/: metadata.yaml
avbuffer/current/: AVBufferHelper.cpp  AVBufferHelper.hpp  AVBufferHelperCWrapper.cpp  AVBufferHelperCWrapper.hpp  CMakeLists.txt  VendorPlatformBufferOps.cpp  VendorPlatformBufferOps.hpp  avbuffer_helper.h  avbufferhelper.h  hfp-avbuffer.yaml  interface.yaml  metadata.yaml  mkdocs.yml
avclock/: metadata.yaml
avclock/current/: CMakeLists.txt  hfp-avclock.yaml  interface.yaml  metadata.yaml  mkdocs.yml
boot/: metadata.yaml
boot/current/: CMakeLists.txt  hfp-boot.yaml  interface.yaml  (+2 more)
broadcast/: metadata.yaml
cdm/: hfp-cdm.yaml  metadata.yaml  mkdocs.yml  readme.md
compositeinput/: metadata.yaml
crypto_engine/: metadata.yaml
cryptoengine/: metadata.yaml
deepsleep/: metadata.yaml
demo/client/car_client_ver_3/: CMakeLists.txt
deviceinfo/: metadata.yaml
docs/: .gitignore  activate_venv.sh  build_docs.sh  deploy_docs.sh  docs.md  index.md  install.sh  requirements.txt
drm/: metadata.yaml
example/: CMakeLists.txt  generate_cpp.sh
example/FWManager/: CMakeLists.txt
example/FWManager/aidl/com/test/: FirmwareStatus.aidl  IFWManager.aidl  IFirmwareUpdateStateListener.aidl
example/FWManager/client/: FWManagerClient.cpp
example/FWManager/service/: FWManager.cpp  FWManager.h  FWManagerService.cpp
examples/aidl_versioning/client/car_client_ver_1/: CMakeLists.txt  CarClient.cpp
examples/aidl_versioning/client/car_client_ver_3/: CMakeLists.txt  CarClient.cpp
examples/aidl_versioning/server/: CMakeLists.txt
examples/aidl_versioning/server/car_service_ver_2/: CMakeLists.txt  CarServer.cpp  CarService.cpp  CarService.h  MakeFile
examples/aidl_versioning/server/car_service_ver_3/: CMakeLists.txt  CarService.cpp  CarService.h
ffv/: metadata.yaml
flash/: metadata.yaml
hdmicec/: metadata.yaml
hdmiinput/: metadata.yaml
hdmioutput/: metadata.yaml
host/: CMakeLists.inc  aidl_api.py  aidl_gen_rule.py  aidl_hash_gen  aidl_interface.py  aidl_ops  aidl_ops.py  interface-update  interface-update.py  intf-update  intf-update.py  logger.py  message_check_equality.txt
indicator/: metadata.yaml
key_vault/: metadata.yaml
keyvault/: metadata.yaml
liblog/: CMakeLists.txt
panel/: metadata.yaml
patches/: aidl.patch  core.patch  libbase.patch  logging.patch  native.patch
planecontrol/: metadata.yaml
python_venv/: pyvenv.cfg
r4ce/: metadata.yaml
scripts/: generate_rag_report.sh  pr_cycle.sh  release.sh  request_reviews.sh  setup_labels.sh  team_mapping.yaml
search/: search_index.json
sensor/: metadata.yaml
sensor/current/: CMakeLists.txt  interface.yaml  metadata.yaml  mkdocs.yml
sensor/current/com/rdk/hal/sensor/: CMakeList.txt  CMakeLists.txt
sensor/current/com/rdk/hal/sensor/light/: CMakeList.txt  Location.aidl  hfp-sensor-light.yaml
sensor/current/com/rdk/hal/sensor/motion/: CMakeLists.txt  Capabilities.aidl  IMotionEventListener.aidl  IMotionManager.aidl  IMotionSensor.aidl  IMotionSensorController.aidl  IMotionSensorControllerListener.aidl  IMotionSensorEventListener.aidl  IMotionSensorManager.aidl  LastEventInfo.aidl  MotionSensorManager.aidl  OperationalMode.aidl  StartConfig.aidl  State.aidl  TimeWindow.aidl  hfp-sensor-motion.yaml
sensor/current/com/rdk/hal/sensor/thermal/: ActionEvent.aidl  ActionType.aidl  CMakeLists.txt  IThermalEventListener.aidl  IThermalSensor.aidl  State.aidl  TemperatureReading.aidl  cMakeList.txt  hfp-sensor-thermal.yaml
sensor/current/docs/: sensor.md
sensor/current/docs/motion/: motion_sensor.md
sensor/current/docs/thermal/: thermal_sensor.md
stable/: .aidl_hashes  dependencies.txt
stylesheets/: extra.css
targets/: CMakeLists.txt
tools/: BinderDevice.c  production-build.sh
videodecoder/: README.md  metadata.yaml
videosink/: metadata.yaml
(+2183 files in other folders)
